New yazi config, usb manager, version changes

--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,151 +1,151 @@
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$background = rgba(18130bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$background = rgba(0f1512ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $error = rgba(ffb4abff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $error_container = rgba(93000aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$inverse_on_surface = rgba(362f27ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$inverse_on_surface = rgba(2c322fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$inverse_primary = rgba(7e570fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$inverse_primary = rgba(196b52ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$inverse_surface = rgba(ede1d4ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$inverse_surface = rgba(dee4dfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_background = rgba(ede1d4ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_background = rgba(dee4dfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $on_error = rgba(690005ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_primary = rgba(442b00ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary = rgba(003829ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_primary_container = rgba(ffddb1ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary_container = rgba(a5f2d3ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_primary_fixed = rgba(291800ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary_fixed = rgba(002116ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_primary_fixed_variant = rgba(614000ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary_fixed_variant = rgba(00513cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_secondary = rgba(3d2e16ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary = rgba(1e352cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_secondary_container = rgba(fadebcff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary_container = rgba(cee9dbff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_secondary_fixed = rgba(271904ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary_fixed = rgba(082018ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_secondary_fixed_variant = rgba(56442aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary_fixed_variant = rgba(354c42ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_surface = rgba(ede1d4ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_surface = rgba(dee4dfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_surface_variant = rgba(d3c4b4ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_surface_variant = rgba(bfc9c2ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_tertiary = rgba(233516ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary = rgba(0a3445ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_tertiary_container = rgba(d3eabdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary_container = rgba(c2e8fdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_tertiary_fixed = rgba(0f2004ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary_fixed = rgba(001e2bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$on_tertiary_fixed_variant = rgba(394c2bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary_fixed_variant = rgba(264b5cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$outline = rgba(9b8f80ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$outline = rgba(89938dff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$outline_variant = rgba(4f4539ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$outline_variant = rgba(404944ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$primary = rgba(f3bd6eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary = rgba(8ad6b8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$primary_container = rgba(614000ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary_container = rgba(00513cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$primary_fixed = rgba(ffddb1ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary_fixed = rgba(a5f2d3ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$primary_fixed_dim = rgba(f3bd6eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary_fixed_dim = rgba(8ad6b8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $scrim = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$secondary = rgba(dcc3a1ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary = rgba(b3ccc0ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$secondary_container = rgba(56442aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary_container = rgba(354c42ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$secondary_fixed = rgba(fadebcff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary_fixed = rgba(cee9dbff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$secondary_fixed_dim = rgba(dcc3a1ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary_fixed_dim = rgba(b3ccc0ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $shadow = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$source_color = rgba(9b8b77ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$source_color = rgba(238366ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface = rgba(18130bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface = rgba(0f1512ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_bright = rgba(3f382fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_bright = rgba(343b37ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_container = rgba(251f17ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container = rgba(1b211eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_container_high = rgba(2f2921ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_high = rgba(252b28ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_container_highest = rgba(3a342bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_highest = rgba(303633ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_container_low = rgba(201b13ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_low = rgba(171d1aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_container_lowest = rgba(120d07ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_lowest = rgba(0a0f0dff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_dim = rgba(18130bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_dim = rgba(0f1512ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_tint = rgba(f3bd6eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_tint = rgba(8ad6b8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$surface_variant = rgba(4f4539ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_variant = rgba(404944ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$tertiary = rgba(b7cea2ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary = rgba(a7cce0ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$tertiary_container = rgba(394c2bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary_container = rgba(264b5cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$tertiary_fixed = rgba(d3eabdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary_fixed = rgba(c2e8fdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
-$tertiary_fixed_dim = rgba(b7cea2ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary_fixed_dim = rgba(a7cce0ff)
 
